src/include/c_api.h


typedef struct {
    float (__stdcall* measure_text_width)(const U16Char* text, int32_t font_style);
    float (__stdcall* measure_inlay_hint_width)(const U16Char* text);
    float (__stdcall* measure_icon_width)(int32_t icon_id);
    void  (__stdcall* get_font_metrics)(float* arr, size_t length);
} text_measurer_t;
EDITOR_API intptr_t create_document_from_utf16(const U16Char* text);
EDITOR_API size_t get_document_line_count(intptr_t document_handle);
EDITOR_API const U16Char* get_document_line_text(intptr_t document_handle, size_t line);
EDITOR_API intptr_t create_editor(text_measurer_t measurer, const uint8_t* options_data, size_t options_size);
EDITOR_API void free_editor(intptr_t editor_handle);
EDITOR_API void set_editor_document(intptr_t editor_handle, intptr_t document_handle);
EDITOR_API void set_editor_viewport(intptr_t editor_handle, int16_t width, int16_t height);
EDITOR_API void editor_on_font_metrics_changed(intptr_t editor_handle);
EDITOR_API void editor_set_fold_arrow_mode(intptr_t editor_handle, int mode);
EDITOR_API void editor_set_wrap_mode(intptr_t editor_handle, int mode);
EDITOR_API void editor_set_tab_size(intptr_t editor_handle, int tab_size);
EDITOR_API void editor_set_scale(intptr_t editor_handle, float scale);
EDITOR_API void editor_set_line_spacing(intptr_t editor_handle, float add, float mult);
EDITOR_API void editor_set_content_start_padding(intptr_t editor_handle, float padding);
EDITOR_API void editor_set_show_split_line(intptr_t editor_handle, int show);
EDITOR_API void editor_set_current_line_render_mode(intptr_t editor_handle, int mode);
EDITOR_API void editor_set_gutter_sticky(intptr_t editor_handle, int sticky);
EDITOR_API void editor_set_gutter_visible(intptr_t editor_handle, int visible);
EDITOR_API const uint8_t* build_editor_render_model(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* handle_editor_gesture_event_ex(intptr_t editor_handle, uint8_t type, uint8_t pointer_count, float* points,
    uint8_t modifiers, float wheel_delta_x, float wheel_delta_y, float direct_scale, size_t* out_size);
EDITOR_API const uint8_t* editor_tick_animations(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* handle_editor_key_event(intptr_t editor_handle, uint16_t key_code, const char* text, uint8_t modifiers, size_t* out_size);
EDITOR_API const uint8_t* editor_insert_text(intptr_t editor_handle, const char* text, size_t* out_size);
EDITOR_API const uint8_t* editor_replace_text(intptr_t editor_handle,
    size_t start_line, size_t start_column,
    size_t end_line, size_t end_column,
    const char* text, size_t* out_size);
EDITOR_API const uint8_t* editor_delete_text(intptr_t editor_handle,
    size_t start_line, size_t start_column,
    size_t end_line, size_t end_column, size_t* out_size);
EDITOR_API const uint8_t* editor_backspace(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_delete_forward(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_move_line_up(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_move_line_down(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_copy_line_up(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_copy_line_down(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_delete_line(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_insert_line_above(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_insert_line_below(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_undo(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_redo(intptr_t editor_handle, size_t* out_size);
EDITOR_API int editor_can_undo(intptr_t editor_handle);
EDITOR_API int editor_can_redo(intptr_t editor_handle);
EDITOR_API void editor_set_cursor_position(intptr_t editor_handle, size_t line, size_t column);
EDITOR_API void editor_get_cursor_position(intptr_t editor_handle, size_t* out_line, size_t* out_column);
EDITOR_API void editor_select_all(intptr_t editor_handle);
EDITOR_API void editor_set_selection(intptr_t editor_handle, size_t start_line, size_t start_column, size_t end_line, size_t end_column);
EDITOR_API int editor_get_selection(intptr_t editor_handle, size_t* out_start_line, size_t* out_start_column, size_t* out_end_line, size_t* out_end_column);
EDITOR_API const char* editor_get_selected_text(intptr_t editor_handle);
EDITOR_API void editor_get_word_range_at_cursor(intptr_t editor_handle, size_t* out_start_line, size_t* out_start_column, size_t* out_end_line, size_t* out_end_column);
EDITOR_API const char* editor_get_word_at_cursor(intptr_t editor_handle);
EDITOR_API void editor_move_cursor_left(intptr_t editor_handle, int extend_selection);
EDITOR_API void editor_move_cursor_right(intptr_t editor_handle, int extend_selection);
EDITOR_API void editor_move_cursor_up(intptr_t editor_handle, int extend_selection);
EDITOR_API void editor_move_cursor_down(intptr_t editor_handle, int extend_selection);
EDITOR_API void editor_move_cursor_to_line_start(intptr_t editor_handle, int extend_selection);
EDITOR_API void editor_move_cursor_to_line_end(intptr_t editor_handle, int extend_selection);
EDITOR_API void editor_composition_start(intptr_t editor_handle);
EDITOR_API void editor_composition_update(intptr_t editor_handle, const char* text);
EDITOR_API const uint8_t* editor_composition_end(intptr_t editor_handle, const char* committed_text, size_t* out_size);
EDITOR_API void editor_composition_cancel(intptr_t editor_handle);
EDITOR_API int editor_is_composing(intptr_t editor_handle);
EDITOR_API void init_unhandled_exception_handler();